--- a/src/InputDecorator/InputDecorator.less
+++ b/src/InputDecorator/InputDecorator.less
@@ -30,7 +30,7 @@
 }
 
 .moon-input-decorator:not(.moon-input-header-input-decorator) {
-	padding: 12px 30px;
+	padding: 3px 30px;
 	border-radius: 1008px;
 }
 
@@ -41,30 +41,4 @@
 
 .moon-expandable-input .moon-input-decorator:not(.moon-input-header-input-decorator) {
 	margin: 6px 0;
-}
-
-.enyo-locale-non-latin {
-	.moon-input-decorator:not(.moon-input-header-input-decorator) {
-		padding: 6px 30px 12px;
-	}
-
-	// Languages with combining accent characters
-	&.enyo-locale-th, // Thai
-	&.enyo-locale-ar, // Arabic
-	&.enyo-locale-fa, // Farsi
-	&.enyo-locale-ur, // Urdu
-	&.enyo-locale-ku, // Kurdish
-	&.enyo-locale-he, // Hebrew
-	&.enyo-locale-hi, // Hindi
-	&.enyo-locale-ta, // Tamil
-	&.enyo-locale-te, // Telugu
-	&.enyo-locale-kn, // Kannada
-	&.enyo-locale-ml, // Malayalam
-	&.enyo-locale-mr, // Marathi
-	&.enyo-locale-bn, // Bengali
-	&.enyo-locale-pa {// Panjabi
-		.moon-input-decorator:not(.moon-input-header-input-decorator) {
-			padding: 1px 30px;
-		}
-	}
 }
